--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     
     <h1>I'm Ben</h1>
     <h2>I'm a web developer</h2>
-    <img src="/My personal site 2/img/Assets/vaporwave-computer.jpg" alt="computer" class="computer">
+    <img src="/my-personal-site-2/img/Assets/vaporwave-computer.jpg" alt="computer" class="computer">
     <P class= intro>I am an ambitious, hard-working individual. I am committed to teamwork, collaborating with others, and working autonomously as required.<br> 
     I am a clear effective communicator with well-established solid problem-solving skills.<br> 
     I believe that my technical and interpersonal skills would be well suited for any business in the IT field.</P>
@@ -63,13 +63,13 @@
 
     <h1 id="#Work Experience">Work Experience</h1>
 
-    <img src="/My personal site 2/img/Assets/Halloween-HQ-Logo-Stacked.jpg" 
+    <img src="/my-personal-site-2/img/Assets/Halloween-HQ-Logo-Stacked.jpg" 
     class="halloween" alt="halloween-hq.png">    
 
-    <br><img src="/My personal site 2/img/Assets/dublin kiz project.jpg" 
+    <br><img src="/my-personal-site-2/img/Assets/dublin kiz project.jpg" 
     class="kiz" alt="dublin kiz project.jpg"><br>
     
-    <img src="/My personal site 2/img/Assets/BJC.jpg" 
+    <img src="/my-personal-site-2/img/Assets/BJC.jpg" 
     class="bjc" alt="BJC.jpg"> 
 
 
@@ -92,10 +92,10 @@
 
 </form>
 
- <a href="https://github.com/benmakescode"><img src="/My personal site 2/img/Assets/github.png" 
+ <a href="https://github.com/benmakescode"><img src="/my-personal-site-2/img/Assets/github.png" 
     class="github" alt="github.png">
 
-<a href="https://www.linkedin.com/in/ben-redmond-814486252/"><img src="/My personal site 2/img/Assets/LinkedIn-Logo.png" 
+<a href="https://www.linkedin.com/in/ben-redmond-814486252/"><img src="/my-personal-site-2/img/Assets/LinkedIn-Logo.png" 
     class="linkedin" alt="LinkedIn-Logo.png">
 
 </div>
