--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 
    
-<div class="top container"id="#intro">
+<div class="top container" id="#intro">
     
     <ul a class="bar">
         <li><a href="#intro">Introduction</a></li>
@@ -29,7 +29,7 @@
     I believe that my technical and interpersonal skills would be well suited for any business in the IT field.</P>
 </div>
 
-<div class="middle container" id="education">
+<div class="middle container" id="#education">
 
     <h1><a href="#education">Education</a></h1>
 
@@ -59,7 +59,7 @@
 
 </div>
 
-<div class="bottom container"id="#Work">
+<div class="bottom container" id="#work">
 
     <h1><a href="#work">Work Experience</a></h1>
 
