--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 
    
-<div class="top container" id="#intro">
+<div class="top container" id="intro">
     
     <ul a class="bar">
         <li><a href="#intro">Introduction</a></li>
@@ -29,7 +29,7 @@
     I believe that my technical and interpersonal skills would be well suited for any business in the IT field.</P>
 </div>
 
-<div class="middle container" id="#education">
+<div class="middle container" id="education">
 
     <h1><a href="#education">Education</a></h1>
 
@@ -59,7 +59,7 @@
 
 </div>
 
-<div class="bottom container" id="#work">
+<div class="bottom container" id="work">
 
     <h1><a href="#work">Work Experience</a></h1>
 
@@ -75,7 +75,7 @@
 
 </div>
 
-<div class="End container" id="#contact me">
+<div class="End container" id="contact">
 
     <h1><a href="#contact">Contact Me</a></h1>
 
